# 2025_SOFTWARE

./: .gitignore  README.md
Docker/: Ros_with_docker.md  software_necessary.md  why_docker.md
Docker/orca_container/: Dockerfile  compose.yaml
Docker/personal_container_template/: Dockerfile  compose.yaml
Docker/raspi_container/: Dockerfile  compose.yaml  entrypoint.sh
raspi_setup/: istruzioni_simulazioni_rasp5.md  setup_rasp5.sh  useful_terminal.sh
ros2_ws/rosbags/: allbags_to_csv.py  create_metadata.py  fix_gps_header.py  serial_to_csv.py
ros2_ws/src/: create_package_prompt.txt
ros2_ws/src/can_bus/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/can_bus/config/: BrunhildAndParsers.yaml  PotAndImuParsers.yaml
ros2_ws/src/can_bus/include/can_bus/: BusInterface.hpp
ros2_ws/src/can_bus/launch/: brunhild_and_parsers.launch.py  pot_imu_parsers.launch.py
ros2_ws/src/can_bus/src/: brunilde_simple_node.cpp  general_parser_node.cpp  imu_parser_node.cpp  parser_node.cpp
ros2_ws/src/can_bus/src/parsers/: Parser.cpp
ros2_ws/src/flap_control/: CMakeLists.txt  package.xml
ros2_ws/src/flap_control/config/: ServoPID.yaml
ros2_ws/src/flap_control/launch/: servo_pid.launch.py  wand2servo.launch.py
ros2_ws/src/flap_control/src/: ServoMapper.cpp  pot2pwm.cpp  pot2wand.cpp  servo2brunilde.cpp  wand2servo.cpp  wand_direct.cpp
ros2_ws/src/gps_interface/: package.xml  setup.py
ros2_ws/src/gps_interface/gps_interface/: gps_node.py
ros2_ws/src/gui/: README.md  package.xml  setup.py
ros2_ws/src/gui/gui/: base_link_bc_node.py  boat_state_pub_node.py  est_tf.py  pose.py  quat_to_rpy.py
ros2_ws/src/gui/launch/: foxglove_clean.launch.py  foxglove_full.launch.py  rviz2.launch.py
ros2_ws/src/gui/rviz2/: config.rviz
ros2_ws/src/my_robot_localization/launch/: sensor_fusion.launch.py
ros2_ws/src/orca/: package.xml  setup.py
ros2_ws/src/orca/launch/: orca.launch.py
ros2_ws/src/poli_sail/: package.xml  setup.cfg  setup.py
ros2_ws/src/poli_sail/config/: DataFromRawRecording.yaml
ros2_ws/src/poli_sail/launch/: data_from_raw_recording.launch.py
ros2_ws/src/poli_sail_gui/: package.xml  setup.cfg  setup.py
ros2_ws/src/poli_sail_gui/poli_sail_gui/: mock_publisher.py  odom_to_vel.py  send_to_monitor.py
ros2_ws/src/sail_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/sail_msgs/msg/: PoliSailGuiMsg.msg  SerialMsgRaw.msg
ros2_ws/src/sail_msgs/srv/: ManageRecording.srv
ros2_ws/src/sensor_estimates/: CMakeLists.txt  package.xml
ros2_ws/src/sensor_estimates/src/: wand2est_node.cpp
ros2_ws/src/state_estimation/: CMakeLists.txt  package.xml
ros2_ws/src/state_estimation/config/: ekf.yaml
ros2_ws/src/state_estimation/launch/: ekf_global.launch.py
ros2_ws/src/state_estimation/src/: gps_altitude.cpp  pot_to_wand_node.cpp  ride_height_node.cpp
(+7 files in other folders)
